--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 dependency-reduced-pom.xml
 
 SSLServer/src/main/resources/test.sh
+Config/src/main/resources/HomeAutomationConfiguration.xml.save
+SSLServer/src/main/resources/CloudConfig.xml.save
 
 /target/
